<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingHorizontal="42dp"
android:paddingTop="16dp"
tools:context=".ResumeActivity">

<TextView
    android:id="@+id/text_view_v2"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:textSize="24sp"
    android:layout_marginVertical="8dp"
    android:textColor="@color/colorPrimaryDark"
    android:text="@string/text_view1"/>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <View
        android:id="@+id/divider2"
        android:layout_width="1dp"
        android:layout_height="517dp"
        android:layout_marginEnd="12dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="36dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_textPersonName"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/FIO"
            android:inputType="textPersonName"
            android:ems="10"
            />

        <EditText
            android:id="@+id/edit_text_birthday"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/birthday"
            android:inputType="date"
            android:ems="10"

            />

        <EditText
            android:id="@+id/edit_text_phone"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/phone"
            android:inputType="phone"
            />

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:id="@+id/edit_text_text"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/position"
            android:inputType="text"
            />

        <EditText
            android:id="@+id/edit_text_salary"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/salary"
            android:inputType="numberDecimal"
            />

        <EditText
            android:id="@+id/edit_text_uri"
            android:layout_height="48dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/github"
            android:inputType="textUri"
            />

        <EditText
            android:id="@+id/edit_text_info"
            android:layout_height="60dp"
            android:layout_width="match_parent"
            android:textSize="14sp"
            android:layout_marginVertical="8dp"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:text="@string/back"
            android:backgroundTint="@color/colorAccent"
            android:onClick="intentMain"/>

    </LinearLayout>

</LinearLayout>


</LinearLayout>