<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center|top"
    android:paddingTop="24dp"
    android:paddingHorizontal="36dp"
    android:id="@+id/background"
    android:background="#DBD6D5">

    <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_string"
                android:textSize="20sp"
                android:paddingStart="8dp"
                android:layout_marginVertical="12dp"
                android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="510dp"
            android:background="@color/colorPrimary"
             />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="8dp"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="70"
                    android:hint="@string/edit_text_hint_string"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/save_string" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/switch_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:paddingLeft="4dp"
                    android:shadowColor="@color/colorPrimary"
                    android:switchPadding="16dp"
                    android:text="@string/switch_light" />

                <ToggleButton
                    android:id="@+id/toggle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginVertical="8dp"
                    android:textOff="@string/heating_off_string"
                    android:textOn="@string/heating_on_string" />

                <CheckBox
                    android:id="@+id/checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:outlineSpotShadowColor="@color/colorPrimary"
                    android:text="@string/set_alarm" />

                <CalendarView
                    android:id="@+id/calendarView"
                    android:layout_width="wrap_content"
                    android:layout_height="308dp" />

                <Button
                    android:id="@+id/button_intent"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@color/colorPrimary"
                    android:onClick="intentResume"
                    android:text="Далее"
                    android:textColor="@android:color/white" />
            </LinearLayout>


        </LinearLayout>





    </LinearLayout>


    </LinearLayout>
